--- a/Game/Game Data_Analysis.ipynb
+++ b/Game/Game Data_Analysis.ipynb
@@ -53,7 +53,7 @@
    ],
    "source": [
     "# read the dataset\n",
-    "game = pd.read_csv(r'C:\\Users\\Akash Pandey\\Downloads\\Video Games\\game_datset.csv')\n",
+    "game = pd.read_csv(r'https://raw.githubusercontent.com/akash5804/Data-Analysis-Project-Codes/refs/heads/main/Game/game_datset.csv')\n",
     "game.info()"
    ]
   },
